removed top padding on lore box to fix spacing

--- a/champs/champpage.css
+++ b/champs/champpage.css
@@ -57,6 +57,7 @@ body {
 	border: 2px solid;
 	border-radius: 15px;
 	padding: 30px;
+	padding-top: 0px;
 }
 
 #champ_tabs {
